# bibtex-validator

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  pyproject.toml
example/: references.bib
src/bibtex_validator/: validator.py
tests/: validator_tests.py
tests/inputs/errors/: E000.bib  E001_1.bib  E001_2.bib  E002_1.bib  E002_2.bib  E002_3.bib  E002_4.bib  E002_5.bib  E003.bib  E004.bib  E004_1.bib  E004_2.bib  E006.bib  E007.bib  E008.bib  E009.bib  E010.bib
tests/inputs/passing/: passing.bib
tests/inputs/warning/: W001.bib  W002.bib  W003.bib  W004.bib  W005.bib
