[project]
name = "bibtex-validator"
version = "0.1.0"
description = "Enforcing IPB BibTeX style."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"


classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "requests",
  "typer>=0.9",
  "bibtexparser @ git+https://github.com/sciunto-org/python-bibtexparser@main"
]

[project.scripts]
bibtex-validator = "bibtex_validator.validator:run"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = "120"

[tool.pylint.format]
max-line-length = "120"

[tool.isort]
profile = "black"
